[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tribbler = { path = "../tribbler" }
fuser = {path = "../tribbler/fuser", features = ["serializable"]}
tonic = "0.6"
libc = "0.2.51"
log = "0.4.6"
memchr = "2"
users = "0.11.0"
page_size = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
smallvec = "1.6.1"
zerocopy = "0.6"
clap = { version = "3.0", features = ["cargo"] }
env_logger = "0.9"
bincode = "1.3.1"
async-trait = "0.1.53"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
env_logger = "0.9"
clap = { version = "3.0", features = ["cargo"] }
bincode = "1.3.1"
serde = {version = "1.0.102", features=["std", "derive"]}
tempfile = "3"

[build-dependencies]
pkg-config = {version = "0.3.14", optional = true }
tonic-build = { version = "0.6", features = ["rustfmt"] }