[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = {path = "./fuser"}
libc = "0.2.51"
log = "0.4.6"
memchr = "2"
users = "0.11.0"
page_size = "0.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
smallvec = "1.6.1"
zerocopy = "0.6"
clap = { version = "3.0", features = ["cargo"] }
env_logger = "0.9"
bincode = "1.3.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
local-ip-address = "0.4.4"
async-trait = "0.1.53"
prost = "0.9"
rand = "0.8"

[dev-dependencies]
env_logger = "0.9"
clap = { version = "3.0", features = ["cargo"] }
bincode = "1.3.1"
serde = {version = "1.0.102", features=["std", "derive"]}
tempfile = "3"

[build-dependencies]
pkg-config = {version = "0.3.14", optional = true }

[features]
default = ["libfuse"]
libfuse = ["pkg-config"]
# serializable = ["serde"]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
abi-7-20 = ["abi-7-19"]
abi-7-21 = ["abi-7-20"]
abi-7-22 = ["abi-7-21"]
abi-7-23 = ["abi-7-22"]
abi-7-24 = ["abi-7-23"]
abi-7-25 = ["abi-7-24"]
abi-7-26 = ["abi-7-25"]
abi-7-27 = ["abi-7-26"]
abi-7-28 = ["abi-7-27"]
abi-7-29 = ["abi-7-28"]
abi-7-30 = ["abi-7-29"]
abi-7-31 = ["abi-7-30"]